--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,4 @@
 {
-"update_url": "https://clients2.google.com/service/update2/crx",
-
    "name": "__MSG_appName__",
    "description": "__MSG_shortDesc__",
    "version": "1.1",
@@ -15,6 +13,10 @@
    "action": {
       "default_popup":"popup.html"
    },
-   "permissions": ["storage"],
+   "host_permissions": [
+      "http://*/*",
+      "https://*/*"
+   ],
+   "permissions": ["storage", "offscreen"],
    "background":{}
 }
